--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <Header>
-        <!-- backgroun img + logo -->
-
+        <!-- backgroun img + logo + Titolo-->
+        <div class="logocontainer">
+            <div class="logotopspace"></div>
+            <img id=logo src="img/logo.svg" alt="Logo Vettoriale Booleaner">
+        </div>
+        <div class="contenitore">
+            <h1>
+                Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Bernars-Lee
+            </h1>
+        </div>
     </Header>
     <main>
-        <!-- Titolo e riconoscimenti e data scrittura articolo + foto con descrizione + paragrafo con lista non ordinata a 3 punti e tabella 3x4-->  
+        <!-- Riconoscimenti e data scrittura articolo + foto con descrizione + paragrafo con lista non ordinata a 3 punti e tabella 3x4-->  
 
 
 
