--- a/index.html
+++ b/index.html
@@ -7,29 +7,87 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <Header>
-        <!-- backgroun img + logo + Titolo-->
-        <div class="logocontainer">
-            <div class="logotopspace"></div>
-            <img id=logo src="img/logo.svg" alt="Logo Vettoriale Booleaner">
-        </div>
-        <div class="contenitore">
-            <h1>
-                Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Bernars-Lee
-            </h1>
-        </div>
-    </Header>
-    <main>
-        <!-- Riconoscimenti e data scrittura articolo + foto con descrizione + paragrafo con lista non ordinata a 3 punti e tabella 3x4-->  
+    <div class="bodydiv">
+        <Header>
+            <!-- backgroun img + logo + Titolo-->
+            <div class="logocontainer">
+                <div class="logotopspace"></div>
+                <img id=logo src="img/logo.svg" alt="Logo Vettoriale Booleaner">
+            </div>
+            <div class="contenitore">
+                <h1>
+                    Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Bernars-Lee
+                </h1>
+            </div>
+        </Header>
+        <main>
+            <!-- Riconoscimenti e data scrittura articolo + foto con descrizione + paragrafo con lista non ordinata a 3 punti e tabella 3x4-->
+            <Div>
+                <span class="riconoscimenti">Scritto da 
+                    <Span id="thebooleaner">The Booleaner</Span>
+                </Span>
+                <br>
+                <span id="data">il 10/10/2020</Span>
+            </Div>
+            <br>
+            <div>
+                <img src="img/tim-1.jpg" alt="Tim che espone davanti al pubblico">
+                <img src="img/tim-2.jpg" alt="Ritratto di Tim"><br>
+                <span>1st photo Lorem ipsum dolor sit amet consectetur adipisicing</span><br>
+                <span>2nd photo Lorem ipsum dolor sit amet</span>
+            </div>
+            <br>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sit assumenda numquam eius, et rerum sint incidunt odio labore fugiat vitae atque reiciendis quasi unde accusamus quisquam. <span class="evidenziatore"> pariatur totam voluptatem sit eum a aut doloribus mollitia reprehenderit nemo, ipsa iure?</span> Omnis, eos ducimus Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dignissimos dolore iste Aliquid beatae iure maiores Lorem ipsum, dolor sit amet consectetur adipisicing elit.  
+                </p>
+            </div>
+            <br>
+            <div>
+                <ul>
+                    <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat omnis corporis odit vero tenetur, suscipit explicabo delectus sint ipsum adipisci, </li>
+                    <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat omnis corporis odit vero tenetur, suscipit explicabo delectus sint ipsum adipisci, </li>
+                    <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat omnis corporis odit vero tenetur, suscipit explicabo delectus sint ipsum adipisci, </li>
+                </ul>
+            </div>
+            <br>
+            <div>
+                <!-- tabella -->
+                <table>
+                    <tr>
+                        <td class="thlarghezza"><Strong>Lorem ipsum dolor</Strong></td>
+                        <td class="thlarghezza"><Strong>Lorem ipsum dolor</Strong></td>
+                        <td class="thlarghezza1"><Strong>Lorem ipsum dolor</Strong></td>
+                    </tr>
+                    <tr>
+                        <td class="tdcolore">Lorem ipsum dolor</td>
+                        <td class="tdcolore">Lorem ipsum dolor</td>
+                        <td class="tdcolore">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio autem voluptatum quos corporis omnis recusandae officiis exercitationem id. Ullam quam nesciunt dolore sed rerum ipsam itaque optio minima voluptates officia.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio autem voluptatum quos corporis omnis recusandae officiis exercitationem id. Ullam quam nesciunt dolore sed rerum ipsam itaque optio minima voluptates officia.</td>
+                    </tr>
+                    <tr>
+                        <td class="tdcolore">Lorem ipsum dolor</td>
+                        <td class="tdcolore">Lorem ipsum dolor</td>
+                        <td class="tdcolore">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio autem voluptatum quos corporis omnis recusandae officiis exercitationem id. Ullam quam nesciunt dolore sed rerum ipsam itaque optio minima voluptates officia.</td>
+                    </tr>
+                </table>
+            </div>
+            <br>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sit assumenda numquam eius, et rerum sint incidunt odio labore fugiat vitae atque reiciendis quasi unde accusamus quisquam. <span class="evidenziatore"> pariatur totam voluptatem sit eum a aut doloribus mollitia reprehenderit nemo, ipsa iure?</span> Omnis, eos ducimus Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dignissimos dolore iste Aliquid beatae iure maiores Lorem ipsum, dolor sit amet consectetur adipisicing elit.  
+                </p>
+            </div>
+            <br>
+        </main>
+        <footer>
+            <!-- 2 Suggerimenti con titolo -->
 
-
-
-
-    </main>
-    <footer>
-        <!-- 2 Suggerimenti con titolo -->
-
-    </footer>
-    
+        </footer>
+    </div>    
 </body>
 </html>
