--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
         <footer>
             <!-- 2 Suggerimenti con titolo -->
 
+            <div class="footer1">
+                <strong>Lorem ipsum dolor</strong>
+            </div>
+            <div class="footer2">
+                <strong>Lorem ipsum dolor</strong>
+            </div>
+
         </footer>
     </div>    
 </body>
